<resources>
    <string name="app_name">Abecedario para niños</string>
    <string name="bnvd">BIENVENIDOS</string>
    <string name="inici">Registrarse</string>
    <string name="nivel">Elige el nivel que deseas</string>
    <string name="Básico">Básico</string>
    <string name="avanzado">Avanzado</string>
    <string name="basico">Básico</string>
    <string name="btA">A</string>
    <string name="btE">E</string>
    <string name="btI">I</string>
    <string name="btO">O</string>
    <string name="btU">U</string>
    <string name="usuario">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="regis">Crea uno aquí</string>
    <string name="usu">¿No tienes un usuario?</string>
    <string name="Sesion">Iniciar Sesión</string>
    <string name="iniciar">Iniciar</string>
    <string name="vocalA">A</string>
    <string name="vocalE">E</string>
    <string name="vocalI">I</string>
    <string name="VocalO">O</string>
    <string name="VocalU">U</string>
    <string name="abeja">Abeja</string>
    <string name="elefante">Elefante</string>
    <string name="iguana">Iguana</string>
    <string name="orni">Ornitorrinco</string>
    <string name="urra">Urraca</string>
    <string name="Volver">Regresar </string>
    <string name="Registro">Regístrate</string>
    <string name="Nombre">Escribe un Usuario</string>
    <string name="name">Usuario</string>
    <string name="Contraseña">Escribe una Contraseña</string>
    <string name="OK">Guardar</string>
    <string name="contra">*****</string>
    <string name="regresar">Menú</string>
    <string name="tvtitulo">Avanzado</string>
    <string name="btnA">A</string>
    <string name="btnB">B</string>
    <string name="btnC">C</string>
    <string name="btnD">D</string>
    <string name="btnE">E</string>
    <string name="btnF">F</string>
    <string name="btnG">G</string>
    <string name="btnH">H</string>
    <string name="btnI">I</string>
    <string name="btnJ">J</string>
    <string name="btnK">K</string>
    <string name="btnL">L</string>
    <string name="btnM">M</string>
    <string name="btnN">N</string>
    <string name="btnO">O</string>
    <string name="btnP">P</string>
    <string name="btnQ">Q</string>
    <string name="btnR">R</string>
    <string name="btnS">S</string>
    <string name="btnT">T</string>
    <string name="btnU">U</string>
    <string name="btnV">V</string>
    <string name="btnW">W</string>
    <string name="btnX">X</string>
    <string name="btnY">Y</string>
    <string name="btnZ">Z</string>
    <string name="btsalir">Menú</string>
    <string name="tituloA">A</string>
    <string name="tituloB">B</string>
    <string name="tituloC">C</string>
    <string name="tituloD">D</string>
    <string name="tituloE">E</string>
    <string name="tituloF">F</string>
    <string name="tituloG">G</string>
    <string name="tituloH">H</string>
    <string name="tituloI">I</string>
    <string name="tituloJ">J</string>
    <string name="tituloK">K</string>
    <string name="tituloL">L</string>
    <string name="tituloM">M</string>
    <string name="tituloN">N</string>
    <string name="tituloO">O</string>
    <string name="tituloP">P</string>
    <string name="tituloQ">Q</string>
    <string name="tituloR">R</string>
    <string name="tituloS">S</string>
    <string name="tituloT">T</string>
    <string name="tituloU">U</string>
    <string name="tituloV">V</string>
    <string name="tituloW">W</string>
    <string name="tituloX">X</string>
    <string name="tituloY">Y</string>
    <string name="tituloZ">Z</string>
    <string name="cosa_a">Avestruz</string>
    <string name="cosa_b">Bandera</string>
    <string name="cosa_c">Camión</string>
    <string name="cosa_d">Dinosaurio</string>
    <string name="cosa_e">Estrella</string>
    <string name="cosa_f">Fuego</string>
    <string name="cosa_g">Gato</string>
    <string name="cosa_h">Hipopótamo</string>
    <string name="cosa_i">Isla</string>
    <string name="cosa_j">Jaguar</string>
    <string name="cosa_k">Koala</string>
    <string name="cosa_l">Laguna</string>
    <string name="cosa_m">Manzana</string>
    <string name="cosa_n">Naranja</string>
    <string name="cosa_o">Oso</string>
    <string name="cosa_p">Perro</string>
    <string name="cosa_q">Quetzal</string>
    <string name="cosa_r">Río</string>
    <string name="cosa_s">Sandia</string>
    <string name="cosa_t">Toro</string>
    <string name="cosa_u">Uvas</string>
    <string name="cosa_v">Vaca</string>
    <string name="cosa_w">Waffles</string>
    <string name="cosa_x">Xilófono</string>
    <string name="cosa_y">Yogurt</string>
    <string name="cosa_z">Zanahoria</string>
    <string name="salir_a">Volver</string>
    <string name="salir_b">Volver</string>
    <string name="salir_c">Volver</string>
    <string name="salir_d">Volver</string>
    <string name="salir_e">Volver</string>
    <string name="salir_f">Volver</string>
    <string name="salir_g">Volver</string>
    <string name="salir_h">Volver</string>
    <string name="salir_i">Volver</string>
    <string name="salir_j">Volver</string>
    <string name="salir_k">Volver</string>
    <string name="salir_l">Volver</string>
    <string name="salir_m">Volver</string>
    <string name="salir_n">Volver</string>
    <string name="salir_o">Volver</string>
    <string name="salir_p">Volver</string>
    <string name="salir_q">Volver</string>
    <string name="salir_r">Volver</string>
    <string name="salir_s">Volver</string>
    <string name="salir_t">Volver</string>
    <string name="salir_u">Volver</string>
    <string name="salir_v">Volver</string>
    <string name="salir_w">Volver</string>
    <string name="salir_x">Volver</string>
    <string name="salir_y">Volver</string>
    <string name="salir_z">Volver</string>
    <string name="color">Colores</string>
    <string name="titulo_color">Colores</string>
    <string name="btverde">Verde</string>
    <string name="btnaranja">Naranja</string>
    <string name="btmorado">Morado</string>
    <string name="btrosado">Rosado</string>
    <string name="btazul">Azul</string>
    <string name="btceleste">Celeste</string>
    <string name="btamarillo">Amarillo</string>
    <string name="btcafe">Café</string>
    <string name="btblanco">Blanco</string>
    <string name="btnegro">Negro</string>
    <string name="btnumeros">Numeros</string>
    <string name="titulo_numeros">Numeros</string>
    <string name="btcero">0</string>
    <string name="btuno">1</string>
    <string name="btdos">2</string>
    <string name="bttres">3</string>
    <string name="btcuatro">4</string>
    <string name="btcinco">5</string>
    <string name="btseis">6</string>
    <string name="btsiete">7</string>
    <string name="btocho">8</string>
    <string name="btnueve">9</string>



</resources>