<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/avanzado"
    tools:context=".Avanzado">

    <Button
        android:id="@+id/btnZ"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnZ"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862" />

    <Button
        android:id="@+id/btnY"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnY"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.293"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862" />

    <Button
        android:id="@+id/btnMenu"
        android:layout_width="121dp"
        android:layout_height="51dp"
        android:backgroundTint="@color/yellowpastel"
        android:text="@string/btsalir"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961" />

    <Button
        android:id="@+id/btnX"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnX"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.758" />

    <Button
        android:id="@+id/btnW"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnW"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.758" />

    <Button
        android:id="@+id/btnV"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnV"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.367"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.758" />

    <Button
        android:id="@+id/btnU"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnU"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.758" />

    <Button
        android:id="@+id/btnT"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnT"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661" />

    <Button
        android:id="@+id/btnS"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnS"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661" />

    <Button
        android:id="@+id/btnQ"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnQ"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661" />

    <Button
        android:id="@+id/btnR"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnR"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.367"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661" />

    <Button
        android:id="@+id/btnN"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnN"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.367"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.573" />

    <Button
        android:id="@+id/btnE"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnE"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.391" />

    <Button
        android:id="@+id/btnP"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnP"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.573" />

    <Button
        android:id="@+id/btnO"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnO"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.573" />

    <Button
        android:id="@+id/btnM"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnM"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.573" />

    <Button
        android:id="@+id/btnL"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnL"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <Button
        android:id="@+id/btnK"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnK"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <Button
        android:id="@+id/btnI"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnI"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <Button
        android:id="@+id/btnA"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnA"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294" />

    <Button
        android:id="@+id/btnH"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnH"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.391" />

    <Button
        android:id="@+id/btnG"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnG"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.391" />

    <Button
        android:id="@+id/btnJ"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnJ"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.367"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <Button
        android:id="@+id/btnF"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnF"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.367"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.391" />

    <Button
        android:id="@+id/btnB"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnB"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.367"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294" />

    <Button
        android:id="@+id/btnD"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnD"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvtitulo"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        android:fontFamily="casual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cafepastel"
        android:text="@string/btnC"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294" />
</androidx.constraintlayout.widget.ConstraintLayout>