<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondonumeros"
    tools:context=".Numeros">

    <Button
        android:id="@+id/btnMenu2"
        android:layout_width="96dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/yellowpastel"
        android:text="@string/btsalir"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconTint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.908" />

    <Button
        android:id="@+id/btuno"
        android:layout_width="86dp"
        android:layout_height="95dp"
        android:backgroundTint="@color/gris"
        android:backgroundTintMode="add"
        android:text="@string/btuno"
        android:textColor="@color/black"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.319" />

    <Button
        android:id="@+id/btcero"
        android:layout_width="86dp"
        android:layout_height="95dp"
        android:backgroundTint="@color/gris"
        android:backgroundTintMode="add"
        android:text="@string/btcero"
        android:textColor="@color/black"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366" />

    <Button
        android:id="@+id/btdos"
        android:layout_width="86dp"
        android:layout_height="95dp"
        android:backgroundTint="@color/gris"
        android:backgroundTintMode="add"
        android:text="@string/btdos"
        android:textColor="@color/black"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382" />

    <Button
        android:id="@+id/btcuatro"
        android:layout_width="86dp"
        android:layout_height="95dp"
        android:backgroundTint="@color/gris"
        android:backgroundTintMode="add"
        android:text="@string/btcuatro"
        android:textColor="@color/black"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btcinco"
        android:layout_width="86dp"
        android:layout_height="95dp"
        android:backgroundTint="@color/gris"
        android:backgroundTintMode="add"
        android:text="@string/btcinco"
        android:textColor="@color/black"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.556" />

    <Button
        android:id="@+id/bttres"
        android:layout_width="86dp"
        android:layout_height="95dp"
        android:backgroundTint="@color/gris"
        android:backgroundTintMode="add"
        android:text="@string/bttres"
        android:textColor="@color/black"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <Button
        android:id="@+id/btsiete"
        android:layout_width="86dp"
        android:layout_height="95dp"
        android:backgroundTint="@color/gris"
        android:backgroundTintMode="add"
        android:text="@string/btsiete"
        android:textColor="@color/black"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669" />

    <Button
        android:id="@+id/btocho"
        android:layout_width="86dp"
        android:layout_height="95dp"
        android:backgroundTint="@color/gris"
        android:backgroundTintMode="add"
        android:text="@string/btocho"
        android:textColor="@color/black"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726" />

    <Button
        android:id="@+id/btnueve"
        android:layout_width="86dp"
        android:layout_height="95dp"
        android:backgroundTint="@color/gris"
        android:backgroundTintMode="add"
        android:text="@string/btnueve"
        android:textColor="@color/black"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

    <TextView
        android:id="@+id/tvTituloNumeros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/titulo_numeros"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <Button
        android:id="@+id/btseis"
        android:layout_width="86dp"
        android:layout_height="95dp"
        android:backgroundTint="@color/gris"
        android:backgroundTintMode="add"
        android:text="@string/btseis"
        android:textColor="@color/black"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726" />

</androidx.constraintlayout.widget.ConstraintLayout>